fix: type generation in wrong outputDir

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,6 +14,6 @@
     // Types should go into this directory.
     // Removing this would place the .d.ts files
     // next to the .js files
-    "outDir": "lib/main"
+    "outDir": "lib"
   }
 }
